# RAG

./: .gitignore  Makefile  README.md  pyproject.toml
src/: constants.py  embedding.py  inference.py  main.py  models.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  inference.py  model.py  prompt.py
src/indexing/: __init__.py  bm25.py  chunking.py  embedding.py  query_expansion.py  store.py
