[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "langchain-text-splitters>=1.1.2",
    "nltk>=3.9.4",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.9.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
